data/derived/comb/progs/unify/prog5271.ml.out
Characters 97-109:
  | Sine e	      -> sin(eval e,x,y)
                       ^^^^^^^^^^^^
Error: This expression has type 'a * 'b * 'c
       but an expression was expected of type float
